# simple_calculator

./: Dockerfile  pyproject.toml
calculator/: calculator.py
src/: test_simple_calculator.py
src/tests/: test_files
tests/: test_simple_calculator.py
