[tool.poetry]
name = "simple-calculator"
version = "0.1.0"
description = "Simple calcuulator example to be used with unit testing"
authors = ["Isabella Dougherty <isabelladougherty@isu.edu>"]
license = "Apache 2.0"
readme = "README.md"
[[packages]]
include = ["calculator", "tests"]
from = "."

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]